# openbrainstore-core

./: .dockerignore  .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  Caddyfile  CloudSetup.md  Dockerfile  LICENSE.md  LocalSetup.md  OKF.md  README.md  SECURITY.md  docker-compose.example.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/specs/: okf-export-profile.md  tenant-isolation.md
ops/: backup-postgres.sh  openbrainstore-backup.service  openbrainstore-backup.timer
src/openbrainstore/: canonical.py  cli.py  config.py  embeddings.py  normalize.py  okf_export.py  ratelimit.py  recall.py  server.py  service.py  store.py  web_contact.py  web_signup.py
src/openbrainstore/auth/: github.py  provider.py  storage.py
src/openbrainstore/backends/: __init__.py  base.py  postgres_backend.py  sqlite_backend.py
src/openbrainstore/blobstore/: __init__.py  base.py  fs.py  s3.py
tests/: conftest.py  test_canonical.py  test_http_transport.py  test_links.py  test_normalize.py  test_oauth.py  test_okf_export.py  test_quotas.py  test_ratelimit.py  test_ratelimit_server.py  test_s3_store.py  test_service.py  test_tenant_isolation.py  test_transport_security.py  test_web_contact.py  test_web_signup.py
