[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openbrainstore"
version = "0.1.0"
description = "Local OKF Memory Service - harness-agnostic long-term agent memory (MCP server, local edition)"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "PyYAML>=6.0",
    "python-ulid>=2.0",
]

[project.optional-dependencies]
postgres = [
    "psycopg[binary]>=3.2",
]
s3 = [
    "boto3>=1.34",
]
vector = [
    "fastembed>=0.4",
    "numpy>=1.26",
]
dev = [
    "pytest>=8.0",
    "moto[s3]>=5.0",
]

[project.scripts]
obs = "openbrainstore.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
